Fix build warnings.

--- a/pts/Makefile
+++ b/pts/Makefile
@@ -1,7 +1,7 @@
 
 CC=gcc
 
-FLAGS= -Wall -O2 -D_GNU_SOURCE
+FLAGS= -Wall -O2 -D_GNU_SOURCE -Wno-unused-but-set-variable
 
 all:
 	$(CC) $(FLAGS) tty0tty.c -o tty0tty
