Implement modules_install target

--- a/module/Makefile
+++ b/module/Makefile
@@ -25,6 +25,9 @@ PWD       := $(shell pwd)
 default:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
 
+modules_install:
+	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
+
 endif
 
 
