module: add udev rule, so tnt* device file has typical permission and group
Signed-off-by: Marc Titinger <marc.titinger@hotmail.fr>

--- a/module/Makefile
+++ b/module/Makefile
@@ -27,6 +27,7 @@ default:
 
 modules_install:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
+	install -m 644 50-tty0tty.rules /etc/udev/rules.d
 
 endif
 
