add ignore module compiled files

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 /module/modules.order
 /module/.tmp_versions
 pts/tty0tty
+/module/.Module.symvers.cmd
+/module/.modules.order.cmd
+
 
 # Ignore backup files
 *~
